--- a/contact.html
+++ b/contact.html
@@ -99,7 +99,7 @@
             <p><i class="bi bi-calendar info-icon"></i> Du 11 au 22 Août 2025</p>
             <p><i class="bi bi-clock info-icon"></i> 09h00 à 12h00, 3 fois/semaine<br>Samedis 08h00 à 12h00</p>
             <p><i class="bi bi-telephone info-icon"></i><a href="tel:+2290196838364" class="text-decoration-none">(+229) 01 96 83 83 64</a></p>
-            <p><i class="bi bi-envelope info-icon"></i><a href="mailto:centredeformatoncomptable@gmail.com" class="text-decoration-none">contact@cfcgeb.com</a></p>
+            <p><i class="bi bi-envelope info-icon"></i><a href="mailto:centredeformatoncomptable@gmail.com" class="text-decoration-none">centredeformatoncomptable@gmail.com</a></p>
           </div>
         </div>
       </div>
