--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
   <section class="hero">
     <div class="container">
       <h1 class="display-5 fw-bold">Formation en Tenue de Comptabilité <br>Conformément au SYCEBNL</h1>
-      <p class="lead mt-3">Organisée par le cabinet fiscal 
- <strong>CFCGEB</strong></p>
+      <p class="lead mt-3">Organisée par le cabinet fiscal CFCGEB
+ <strong></strong></p>
       <a href="inscription.html" class="btn btn-primary btn-lg mt-4">S'inscrire maintenant</a>
     </div>
   </section>
