--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <h2 class="section-title">Objectifs de la Formation</h2>
     <div class="row objectifs mt-4">
       <div class="col-md-6 mb-3">
-        <i class="bi bi-check2-circle"></i> Connaître le contenu du cadre conceptuel du SYCEBNL
+        <i class="bi bi-check2-circle"></i> Comprendre le contenu du cadre conceptuel du SYCEBNL
       </div>
       <div class="col-md-6 mb-3">
         <i class="bi bi-check2-circle"></i> Maîtriser l’analyse comptable
