--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <i class="bi bi-check2-circle"></i> Comprendre le contenu du cadre conceptuel du SYCEBNL
       </div>
       <div class="col-md-6 mb-3">
-        <i class="bi bi-check2-circle"></i> Maîtriser l’analyse comptable EBNL
+        <i class="bi bi-check2-circle"></i> Maîtriser l’analyse comptable des EBNL
       </div>
       <div class="col-md-6 mb-3">
         <i class="bi bi-check2-circle"></i> Comprendre les obligations fiscales & sociales des EBNL
