--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     <h2 class="section-title">Informations sur la Formation</h2>
     <div class="card shadow-sm">
       <div class="card-body">
-        <p><strong>Lieu :</strong> Porto-Novo et En Ligne</p>
+        <p><strong>Lieu :</strong> Porto-Novo en Présentiel et En Ligne</p>
         <p><strong>Dates :</strong> Du <span class="text-danger">Lundi 11 Août</span> au <span class="text-danger">Vendredi 22 Août 2025</span></p>
         <p><strong>Horaires :</strong> 09h00 à 12h00 (3 fois/semaine) <br> Samedis : 08h00 à 12h00 pour les fonctionnaires</p>
         <p><strong>Contact :</strong> <a href="tel:+2290196838364" class="text-primary">(+229)01 96 83 83 64</a></p>
